fix: add some alignments for mobile screen in session screen component

--- a/src/app/reservations/pages/session-screen/session-screen.component.scss
+++ b/src/app/reservations/pages/session-screen/session-screen.component.scss
@@ -16,7 +16,9 @@
 
 .shopping-cart-alignment {
     margin: 15px;
-    width: 100%
+    width: 100%;
+    margin-left: 50px;
+    margin-right: 0px;
 }
 
 .back-button {
